--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+ .flash-notice {
+    background-color: #dbf8d2;
+    color: #154114;
+    padding: 10px;
+    border: 1px solid #4f7942;
+  }
