--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -1,12 +1,25 @@
 <%# http://localhost:3000/users %>
 
-<h1> List of users: </h1>
-<ul>
-    <% @users.each do |user| %>
-        <li>
-            <%# user contains path and id of this user object. %>
-            <% link_to user.name, user %>
-        </li>
-    <% end %>
-<ul>
+<%# Flash messages  %>
+<% if flash[:notice] %>
+    <div class="flash-notice"> <%= flash[:notice] %> </div> 
+<% end%>
+<h1> Welcome to Liz's Connect4 Game! </h1>
 
+<%# edit_profile_path automatically generates '/edit_profile' to match route %>
+<%= link_to "Profile", edit_profile_path %>
+
+
+<h2> Instructions: <h2>
+<ol>
+    <li> To access and play the game, first <%= link_to "create an account", create_account_path %> 
+    if you do not already own one. </li>
+
+    <li> Once you have an account, access game: 
+    <%= link_to "Connect4", "https://papergames.io/en/connect4", target:"_blank" %> </li>
+
+    <li> If you would like to see our top players with the highest scores,
+    please check out our <%= link_to "Scoreboard", scoreboard_path %>! </li>
+</ol>
+
+<h3> Thanks for playing; I hope you have fun! </h3>
