--- a/game/app/views/users/list_users.html.erb
+++ b/game/app/views/users/list_users.html.erb
@@ -1,8 +1,27 @@
-<ul>
+<h1> List of Players </h1>
+
+<table>
+    <thead>
+      <tr>
+        <th> Count </th>
+        <th> Name</th>
+        <th> Username</th>
+        <th>Highest Score</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% count = 0%>
     <% @users.each do |user| %>
-        <li>
-            <%# user contains path and id of this user object. %>
-            <% link_to user.name, user %>
-        </li>
+    <% count += 1%>
+      <tr>
+        <td> <%= count %> </td>
+        <td><%= user.name %> </td>
+        <td><%= user.username %> </td>
+        <td> <%= user.highest_score %> </td>
+      </tr>
     <% end %>
-<ul>
+    </tbody>
+  </table>
+
+  <br>
+  <button> <%= link_to "Back", "/users" %> </button>
