--- a/game/app/views/users/profile.html.erb
+++ b/game/app/views/users/profile.html.erb
@@ -1,18 +1,27 @@
-<h1> Your Profile: <%= @user.name %> </h1>
+<% if flash[:notice] %>
+    <div class="flash-notice"> <%= flash[:notice] %> </div> 
+<% end%>
 
-<h3> Username: <%= @user.username%> </h3>
-<% @user.scores.each do |score| %>
-    <p> Score: <%= score.score %> </p>
-    <p> Date-Time: <%= score.created_at %> </p>
-    <br>
+<% if @user && @data %>
+    <h1> Your Profile: <%= @user.name %> </h1>
+
+    <h3> Username: <%= @user.username%> </h3>
+    <% @data.each do |score| %>
+        <p> <strong> Score:</strong> <%= score.score %> </p>
+        <p> <strong> Date-Time: </strong> <%= score.created_at %> </p>
+        <br>
+    <% end %>
+
+
+    <ul>
+        <li> <%= link_to "Edit", edit_user_path(@data) %> </li>
+        <li> <%= link_to "Destroy", user_path(@data), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+        } %> </li>
+    </ul>
+<% else %>
+    <p>No data found for this user.</p>
 <% end %>
 
-
-<ul>
-    <li> <%= link_to "Edit", edit_user_path(@user) %> </li>
-    <li> <%= link_to "Destroy", user_path(@user), data: {
-        turbo_method: :delete,
-        turbo_confirm: "Are you sure?"
-    } %> </li>
-</ul>
-
+<button> <%= link_to "Back", "/users" %> </button>
