--- a/game/app/views/users/edit_profile.html.erb
+++ b/game/app/views/users/edit_profile.html.erb
@@ -1,3 +1,7 @@
-<h1> Edit User Account Information</h1>
+<h1> Update User Account Information</h1>
 
 <%= render "form", user: @user %>
+
+<br>
+
+<%= link_to "Back", access_profile_path(user_id: @user.id) %>
