--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
     <li> If you would like to see our top players with the highest scores,
     please check out our <%= link_to "Scoreboard", scoreboard_path %>! </li>
     <li> To see the history of your scores, please click the profile button and log in. </li>
-    <li> See a <%= link_to "list of all players", list_users_path %>!</li>
+    <li> See a <%= link_to "list of all players", list_players_path %>!</li>
 </ul>
 
 <h3> Thanks for playing; I hope you have fun! </h3>
