--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
 <h1> Welcome to Liz's Connect4 Game! </h1>
 
 <%# edit_profile_path automatically generates '/edit_profile' to match route %>
-<button> <%= link_to "Profile", authenticate_path %> </button>
+<%= link_to "Profile", authenticate_path %> 
 
 
 
