Fix issues due to commenting out resources in routes file

--- a/game/app/views/users/_form.html.erb
+++ b/game/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%# Create or edit user account  %>
-<%= form_with model: user do |form| %>
+<%= form_with model: user, url: create_account_path do |form| %>
     <div>
         <%= form.label :name %><br>
         <%= form.text_field :name %>
