Included flash message for unsuccesful updates of account information Included back resources because I use it

--- a/game/app/views/users/_form.html.erb
+++ b/game/app/views/users/_form.html.erb
@@ -1,5 +1,8 @@
 <%# Create or edit user account  %>
-<%= form_with model: user, url: create_account_path do |form| %>
+<%# Note: that update path (rather than create) is followed automatically by resources. 
+It knows we are updating because we call edit path beforehand. %>
+
+<%= form_with model: user do |form| %>
     <div>
         <%= form.label :name %><br>
         <%= form.text_field :name %>
@@ -31,6 +34,6 @@
 <br> <br>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit "Submit" %>
   </div>
 <% end %>
