--- a/game/app/views/users/edit_profile.html.erb
+++ b/game/app/views/users/edit_profile.html.erb
@@ -1,3 +1,10 @@
+<% if flash[:alert] %>
+  <div class="flash-alert">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<br>
 <h1> Update User Account Information</h1>
 
 <%= render "form", user: @user %>
