--- a/game/app/views/users/profile.html.erb
+++ b/game/app/views/users/profile.html.erb
@@ -22,14 +22,12 @@
     <p>No scores found for this user.</p>
 <% end %>
 
-    <%# edit_user_path is the standard path set by resources :users %>
-    <%= link_to "Edit", edit_user_path(@user.id) %> 
+<ul>
+        <li> <%= link_to "Edit", edit_user_path(@user.id) %> </li>
+        <li> <%= link_to "Destroy", user_path(@user), data: {
+            turbo_method: :delete,
+            turbo_confirm: "Are you sure?"
+        } %> </li>
+    </ul>
 
-    <%# user_path points to route -> delete '/users/:id', to: 'users#destroy' %>
-    <%= link_to "Delete", user_path(@user), data: {
-        turbo_method: :delete,
-        turbo_confirm: "Are you sure?"
-    } %> 
-    
-
-<%= link_to "Back", "/" %>
+<%= link_to "Back", "/users" %>
