--- a/game/app/views/users/create_account.html.erb
+++ b/game/app/views/users/create_account.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:alert] %>
+  <div class="flash-alert">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
 <h1> Create User Account </h1>
 
 <%= render "form", user: @user %>
