--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&display=swap');
+
+
  .flash-notice {
     background-color: #dbf8d2;
     color: #154114;
@@ -28,4 +32,31 @@
   font-weight: bold;
   padding: 10px;
   border: 1px solid #941304;
+}
+
+body {
+  background-color: papayawhip;
+  display: flex;
+  flex-direction: column;
+  margin: 2% 3% 0 3%;
+  min-height: 100vh;
+}
+
+h1 {
+  padding: 2%;
+  text-align: center;
+  background-color: pink;
+  border-radius: 5%;
+  border-style: solid;
+  border-color: black;
+  font-family: 'Chakra Petch', sans-serif;
+}
+
+a:hover {
+  text-shadow: 2px 2px 4px lightblue;
+  
+}
+
+a {
+  text-decoration: none;
 }
