--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -19,17 +19,27 @@
 
 
  .flash-notice {
-    background-color: #dbf8d2;
     color: #154114;
     font-weight: bold;
-    padding: 10px;
-    border: 1px solid #4f7942;
+    text-align: center;
+    margin-top: 2%;
   }
 
 .flash-alert {
-  background-color: rgb(246, 224, 224);
   color: rgb(175, 7, 7);
   font-weight: bold;
+  text-align: center;
+  margin-top: 2%;
+}
+
+.flash-notice span {
+  background-color: #dbf8d2;
+  padding: 10px;
+  border: 1px solid #4f7942;
+  
+}
+.flash-alert span {
+  background-color: rgb(246, 224, 224);
   padding: 10px;
   border: 1px solid #941304;
 }
