--- a/game/app/views/users/_form.html.erb
+++ b/game/app/views/users/_form.html.erb
@@ -2,38 +2,40 @@
 <%# Note: that update path (rather than create) is followed automatically by resources. 
 It knows we are updating because we call edit path beforehand. %>
 
-<%= form_with model: user do |form| %>
+<div class="form-content">
+  <%= form_with model: user do |form| %>
+      <div>
+          <%= form.label :name %><br>
+          <%= form.text_field :name %>
+          <% user.errors.full_messages_for(:name).each do |message| %>
+              <div> <%= message %> </div>
+          <% end %>
+      </div>
+
+    <br> <br>
+
     <div>
-        <%= form.label :name %><br>
-        <%= form.text_field :name %>
-        <% user.errors.full_messages_for(:name).each do |message| %>
-            <div> <%= message %> </div>
-        <% end %>
+      <%= form.label :username %><br>
+      <%= form.text_field :username %>
+      <% user.errors.full_messages_for(:username).each do |message| %>
+              <div> <%= message %> </div>
+      <% end %>
     </div>
 
-  <br> <br>
+    <br> <br>
 
-  <div>
-    <%= form.label :username %><br>
-    <%= form.text_field :username %>
-    <% user.errors.full_messages_for(:username).each do |message| %>
-            <div> <%= message %> </div>
-        <% end %>
-  </div>
-
-  <br> <br>
-
-  <div>
-   <%= form.label :password %><br>
-    <%= form.text_field :password %>
-    <% user.errors.full_messages_for(:password).each do |message| %>
-            <div> <%= message %> </div>
+    <div>
+      <%= form.label :password %><br>
+      <%= form.text_field :password %>
+      <% user.errors.full_messages_for(:password).each do |message| %>
+              <div> <%= message %> </div>
       <% end %>
-  </div>
+    </div>
 
-<br> <br>
+    <br> <br>
 
-  <div>
-    <%= form.submit "Submit" %>
-  </div>
-<% end %>
+    <div class="form-submit-button">
+      <%= form.submit "Submit" %>
+    </div>
+  <% end %>
+</div>
