Include styling for profile page.

--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -17,33 +17,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&display=swap');
 
-
- .flash-notice {
-    color: #154114;
-    font-weight: bold;
-    text-align: center;
-    margin-top: 2%;
-  }
-
-.flash-alert {
-  color: rgb(175, 7, 7);
-  font-weight: bold;
-  text-align: center;
-  margin-top: 2%;
-}
-
-.flash-notice span {
-  background-color: #dbf8d2;
-  padding: 10px;
-  border: 1px solid #4f7942;
-  
-}
-.flash-alert span {
-  background-color: rgb(246, 224, 224);
-  padding: 10px;
-  border: 1px solid #941304;
-}
-
 body {
   background-color: papayawhip;
   display: flex;
@@ -69,4 +42,44 @@ a:hover {
 
 a {
   text-decoration: none;
+}
+
+.flash-notice {
+    color: #154114;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 2%;
+}
+
+.flash-alert {
+  color: rgb(175, 7, 7);
+  font-weight: bold;
+  text-align: center;
+  margin-top: 2%;
+}
+
+.flash-notice span {
+  background-color: #dbf8d2;
+  padding: 8px;
+  border: 1px inset #4f7942;
+  border-radius: 20%;
+}
+.flash-alert span {
+  background-color: rgb(246, 224, 224);
+  padding: 8px;
+  border: 1px inset #941304;
+  border-radius: 20%;
+}
+
+
+.decor-button {
+  background-color: rgb(144, 54, 234);
+  color:aliceblue;
+  padding: 0.3% 0.8%;
+  text-decoration: none;
+  border-radius: 30%;   
+}
+
+.button-shadow:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
