--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
         <div class="flash-notice"> <%= flash[:notice] %> </div> 
     <% end%>
 
-    <div class="profile-container"> <%= link_to "Profile", authenticate_path, id: "profile-button", class: "profile-button-shadow" %> </div>
+    <div class="profile-button-container"> <%= link_to "Profile", authenticate_path, class: "profile-button button-shadow" %> </div>
 
     <br> 
     <h1> Welcome to Liz's Connect4 Game! </h1>
