--- a/game/app/assets/stylesheets/index.css
+++ b/game/app/assets/stylesheets/index.css
@@ -1,4 +1,4 @@
-#profile-button {
+.profile-button {
     background-color: rgb(144, 54, 234);
     color:aliceblue;
     padding: 10% 20%;
@@ -6,14 +6,10 @@
     border-radius: 30%;   
 }
 
-.profile-button-shadow:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-.profile-container {
+.profile-button-container {
     /* This div will inherit the flex container property from body and align-self: flex-end; will move it to the right side. */
     align-self: flex-end;
-    margin-right: 3%;
+    margin-right: 5%;
 }
 
 .index-content {
