--- a/game/app/views/users/edit_profile.html.erb
+++ b/game/app/views/users/edit_profile.html.erb
@@ -5,10 +5,12 @@
 <% end %>
 
 <br>
-<h1> Update User Account Information</h1>
+<h1> Update Your Account Information</h1>
 
 <%= render "form", user: @user %>
 
 <br>
 
-<%= link_to "Back", access_profile_path(user_id: @user.id) %>
+<div class="edit-profile-button">
+  <%= link_to "Back", access_profile_path(user_id: @user.id), class: "decor-button button-shadow" %> 
+</div>
