Include styling for create user account page

--- a/game/app/views/users/create_account.html.erb
+++ b/game/app/views/users/create_account.html.erb
@@ -9,4 +9,7 @@
 <%= render "form", user: @user %>
 
 <br> 
-<%= link_to "Back", "/" %>
+
+<div class="edit-profile-button">
+  <%= link_to "Back", "/", class: "decor-button button-shadow" %>
+</div>
