Include styling for scoreboard page

--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -83,3 +83,9 @@ a {
 .button-shadow:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+.back-button {
+  display:flex;
+  justify-content: flex-end;
+  margin-right: 4%;
+}
