--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -20,13 +20,13 @@
             if you do not already own one. </li>
 
             <li> Once you have an account, access game: 
-            <%= link_to "Connect4", "https://papergames.io/en/connect4", target:"_blank" %> </li>
+            <%= link_to "Connect4", "https://papergames.io/en/connect4", target:"_blank" %>. </li>
         </ol>
 
         <ul>
             <li> If you would like to see our top players with the highest scores,
             please check out our <%= link_to "Scoreboard", scoreboard_path %>! </li>
-            <li> To see the history of your scores, please log into your <%= link_to "profile", authenticate_path %> . </li>
+            <li> To see the history of your scores, please log into your <%= link_to "profile", authenticate_path %>. </li>
             <li> See a <%= link_to "list of all players", list_players_path %>!</li>
         </ul>
     </div>
