--- a/game/app/views/users/list_players.html.erb
+++ b/game/app/views/users/list_players.html.erb
@@ -1,27 +1,29 @@
+<div class="back-button"> 
+  <%= link_to "Back", "/", class: "decor-button button-shadow" %> 
+</div>
+
 <h1> List of Players </h1>
 
-<table>
-    <thead>
-      <tr>
-        <th> Count </th>
-        <th> Name</th>
-        <th> Username</th>
-        <th>Highest Score</th>
-      </tr>
-    </thead>
-    <tbody>
-    <% count = 0%>
-    <% @users.each do |user| %>
-    <% count += 1%>
-      <tr>
-        <td> <%= count %> </td>
-        <td><%= user.name %> </td>
-        <td><%= user.username %> </td>
-        <td> <%= user.highest_score %> </td>
-      </tr>
-    <% end %>
-    </tbody>
+<table class="table">
+  <caption class="table-caption"> Information about all players: </caption>
+  <thead>
+    <tr>
+      <th scope="col">Count </th>
+      <th scope="col">Name</th>
+      <th scope="col">Username</th>
+      <th scope="col">User's Highest Score</th>
+    </tr>
+  </thead>
+  <tbody>
+  <% count = 0%>
+  <% @users.each do |user| %>
+  <% count += 1%>
+    <tr>
+      <td> <%= count %> </td>
+      <td><%= user.name %> </td>
+      <td><%= user.username %> </td>
+      <td> <%= user.highest_score %> </td>
+    </tr>
+  <% end %>
+  </tbody>
   </table>
-
-  <br>
-<%= link_to "Back", "/" %> 
