--- a/game/app/views/users/scoreboard.html.erb
+++ b/game/app/views/users/scoreboard.html.erb
@@ -3,7 +3,7 @@
 </div>
 <h1> Scoreboard </h1>
 
-<table id="scoreboard-table">
+<table class="table">
   <caption class="table-caption"> Top 10 players with the highest scores: </caption>
   <thead>
     <tr>
