--- a/game/app/assets/stylesheets/profile.css
+++ b/game/app/assets/stylesheets/profile.css
@@ -6,14 +6,26 @@
 
 .profile-links-nav {
     display: flex;
-    justify-content: flex-end;
-    gap: 20px;
-    margin-right: 4%;
+    justify-content: space-between;
 }
 
-.profile-content {
-    flex-wrap: wrap;
+.left-link {
+    margin-left: 3%;
 }
+
+.right-links-container {
+    display:flex;
+    gap: 20px;
+    margin-right: 5%;
+}
+
+.decor-button2 {
+    background-color: rgb(144, 54, 234);
+    color:aliceblue;
+    padding: 2% 3%;
+    text-decoration: none;
+    border-radius: 30%;  
+  }
 
 .scores-container {
     display: grid;
