--- a/game/app/views/users/profile.html.erb
+++ b/game/app/views/users/profile.html.erb
@@ -12,23 +12,26 @@
     <%# </div> %>
  
     <div class="profile-links-nav">
+        <%= link_to "Home", "/", class: "decor-button button-shadow left-link" %> 
         <%# edit_user_path is the standard path set by resources :users %>
-        <%= link_to "Edit", edit_user_path(@user.id), class: "decor-button button-shadow" %> 
+        <div class="right-links-container">
+            <%= link_to "Edit", edit_user_path(@user.id), class: "decor-button2 button-shadow" %> 
 
-        <%# user_path points to route -> delete '/users/:id', to: 'users#destroy' %>
-        <%= link_to "Delete", user_path(@user), class: "decor-button button-shadow", data: {
-            turbo_method: :delete,
-            turbo_confirm: "Are you sure?"
-        } %> 
+            <%# user_path points to route -> delete '/users/:id', to: 'users#destroy' %>
+            <%= link_to "Delete", user_path(@user), class: "decor-button2 button-shadow", data: {
+                turbo_method: :delete,
+                turbo_confirm: "Are you sure?"
+            } %> 
 
-        <%= link_to "Back", "/authenticate", class: "decor-button button-shadow" %>
+            <%= link_to "Back", "/authenticate", class: "decor-button2 button-shadow" %>
+        </div>
     </div>
 </div>
 
 <h1> Your Profile: <%= @user.name %> </h1>
 <h3 class="profile-username-and-message"> Username: <u><%= @user.username%></u> </h3>
 
-<div class="profile-content">
+<div>
     <% if @data.any? %>
         <div class="scores-container">
             <% @data.each do |score| %>
