--- a/game/app/views/users/scoreboard.html.erb
+++ b/game/app/views/users/scoreboard.html.erb
@@ -7,6 +7,7 @@
   <caption class="table-caption"> Top 10 players with the highest scores: </caption>
   <thead>
     <tr>
+    <th scope=""col>Position</th>
       <th scope="col">Name</th>
       <th scope="col">Username</th>
       <th scope="col">Score</th>
@@ -14,8 +15,11 @@
     </tr>
   </thead>
   <tbody>
+    <% count = 0%>
     <% @users.each do |user| %>
       <tr>
+        <% count += 1%>
+        <td><%= count %></td>
         <td><%= user.name %></td>
         <td><%= user.username %></td>
         <td><%= user.highest_score %></td>
