Fix position of back button in create account and edit profile pages so they work even when reducing size of screen. Change highlight color to yellow for scoreboard.

--- a/game/app/assets/stylesheets/form.css
+++ b/game/app/assets/stylesheets/form.css
@@ -4,8 +4,9 @@
     justify-content: center;
 }
 
-.edit-profile-button {
-    display:flex;
+.form-back-button {
+    display: flex;
     justify-content: center;
-    margin-right: 7.5%;
+    position: relative;
+    right: 47px;
 }
