--- a/game/app/views/users/_form.html.erb
+++ b/game/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%# Create or edit user account  %>
-<%# Note: that update path (rather than create) is followed automatically by resources. 
+<%# Note: update path (rather than create) is followed automatically by resources. 
 It knows we are updating because we call edit path beforehand. %>
 
 <div class="form-content">
