--- a/game/app/views/users/create_account.html.erb
+++ b/game/app/views/users/create_account.html.erb
@@ -10,6 +10,6 @@
 
 <br> 
 
-<div class="edit-profile-button">
+<div class="form-back-button">
   <%= link_to "Back", "/", class: "decor-button button-shadow" %>
 </div>
