--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -87,7 +87,7 @@ a {
 .back-button {
   display:flex;
   justify-content: flex-end;
-  margin-right: 4%;
+  margin-right: 60px;
 }
 
 
@@ -108,7 +108,7 @@ a {
 
 .table tr:nth-child(even){background-color: #f2f2f2;}
 .table tr:nth-child(odd){background-color: #fadcf6;}
-.table tr:hover{background-color: #ddd;}
+.table tr:hover{background-color: #eff5b8;}
 
 .table th {
   padding-top: 12px;
