--- a/game/app/views/users/edit_profile.html.erb
+++ b/game/app/views/users/edit_profile.html.erb
@@ -11,6 +11,6 @@
 
 <br>
 
-<div class="edit-profile-button">
+<div class="form-back-button">
   <%= link_to "Back", access_profile_path(user_id: @user.id), class: "decor-button button-shadow" %> 
 </div>
