--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -44,6 +44,10 @@ a {
   text-decoration: none;
 }
 
+.instructions a {
+  text-decoration: underline;
+}
+
 .flash-notice {
     color: #154114;
     font-weight: bold;
