--- a/game/app/views/users/create_account.html.erb
+++ b/game/app/views/users/create_account.html.erb
@@ -6,10 +6,12 @@
 
 <h1> Create User Account </h1>
 
-<%= render "form", user: @user %>
+<main> 
+  <%= render "form", user: @user %>
 
-<br> 
+  <br> 
 
-<div class="form-back-button">
-  <%= link_to "Back", "/", class: "decor-button button-shadow" %>
-</div>
+  <div class="form-back-button">
+    <%= link_to "Back", "/", class: "decor-button button-shadow" %>
+  </div>
+</main>
