--- a/game/app/views/users/list_players.html.erb
+++ b/game/app/views/users/list_players.html.erb
@@ -4,26 +4,28 @@
 
 <h1> List of Players </h1>
 
-<table class="table">
-  <caption class="table-caption"> Information about all players: </caption>
-  <thead>
-    <tr>
-      <th scope="col">Count </th>
-      <th scope="col">Name</th>
-      <th scope="col">Username</th>
-      <th scope="col">User's Highest Score</th>
-    </tr>
-  </thead>
-  <tbody>
-  <% count = 0%>
-  <% @users.each do |user| %>
-  <% count += 1%>
-    <tr>
-      <td> <%= count %> </td>
-      <td><%= user.name %> </td>
-      <td><%= user.username %> </td>
-      <td> <%= user.highest_score %> </td>
-    </tr>
-  <% end %>
-  </tbody>
+<main>
+  <table class="table">
+    <caption class="table-caption"> Information about all players: </caption>
+    <thead>
+      <tr>
+        <th scope="col">Count </th>
+        <th scope="col">Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">User's Highest Score</th>
+      </tr>
+    </thead>
+    <tbody>
+    <% count = 0%>
+    <% @users.each do |user| %>
+    <% count += 1%>
+      <tr>
+        <td> <%= count %> </td>
+        <td><%= user.name %> </td>
+        <td><%= user.username %> </td>
+        <td> <%= user.highest_score %> </td>
+      </tr>
+    <% end %>
+    </tbody>
   </table>
+</main>
