--- a/game/app/views/users/scoreboard.html.erb
+++ b/game/app/views/users/scoreboard.html.erb
@@ -4,29 +4,30 @@
 
 <h1> Scoreboard </h1> 
 
-
-<table class="table">
-  <caption class="table-caption"> Top 10 players with the highest scores: </caption>
-  <thead>
-    <tr>
-    <th scope=""col>Position</th>
-      <th scope="col">Name</th>
-      <th scope="col">Username</th>
-      <th scope="col">Score</th>
-      <th scope="col">Date and Time</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% count = 0%>
-    <% @users.each do |user| %>
+<main>
+  <table class="table">
+    <caption class="table-caption"> Top 10 players with the highest scores: </caption>
+    <thead>
       <tr>
-        <% count += 1%>
-        <td><%= count %></td>
-        <td><%= user.name %></td>
-        <td><%= user.username %></td>
-        <td><%= user.highest_score %></td>
-        <td><%= user.datetime %> </td> 
+      <th scope=""col>Position</th>
+        <th scope="col">Name</th>
+        <th scope="col">Username</th>
+        <th scope="col">Score</th>
+        <th scope="col">Date and Time</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% count = 0%>
+      <% @users.each do |user| %>
+        <tr>
+          <% count += 1%>
+          <td><%= count %></td>
+          <td><%= user.name %></td>
+          <td><%= user.username %></td>
+          <td><%= user.highest_score %></td>
+          <td><%= user.datetime %> </td> 
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</main>
