--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -12,24 +12,26 @@
 
     <br> 
     <h1> Welcome to Liz's Connect4 Game! </h1>
-    
+
     <main> 
         <div class="instructions">
-            <h2 style="text-decoration: underline;"> Instructions: <h2>
-            <ol>
-                <li> To access and play the game, first <%= link_to "create an account", create_account_path %> 
-                if you do not already own one. </li>
+            <h2 style="text-decoration: underline;"> Instructions: </h2>
+            <div class="instructions-content"> 
+                <ol>
+                    <li> To access and play the game, first <%= link_to "create an account", create_account_path %> 
+                    if you do not already own one. </li>
 
-                <li> Once you have an account, access game: 
-                <%= link_to "Connect4", "https://papergames.io/en/connect4", target:"_blank" %>. </li>
-            </ol>
+                    <li> Once you have an account, access game: 
+                    <%= link_to "Connect4", "https://papergames.io/en/connect4", target:"_blank" %>. </li>
+                </ol>
 
-            <ul>
-                <li> If you would like to see our top players with the highest scores,
-                please check out our <%= link_to "Scoreboard", scoreboard_path %>! </li>
-                <li> To see the history of your scores, please log into your <%= link_to "profile", authenticate_path %>. </li>
-                <li> See a <%= link_to "list of all players", list_players_path %>!</li>
-            </ul>
+                <ul>
+                    <li> If you would like to see our top players with the highest scores,
+                    please check out our <%= link_to "Scoreboard", scoreboard_path %>! </li>
+                    <li> To see the history of your scores, please log into your <%= link_to "profile", authenticate_path %>. </li>
+                    <li> See a <%= link_to "list of all players", list_players_path %>!</li>
+                </ul>
+            </div>
         </div>
 
         <div class="welcome-gif-container"> <%= image_tag("short-welcome.gif", alt: "cute apple cartoon waving hello and welcoming users", class: "welcome-gif") %> </div>
