--- a/game/app/views/users/scoreboard.html.erb
+++ b/game/app/views/users/scoreboard.html.erb
@@ -9,7 +9,7 @@
     <caption class="table-caption"> Top 10 players with the highest scores: </caption>
     <thead>
       <tr>
-      <th scope=""col>Position</th>
+      <th scope="col">Position</th>
         <th scope="col">Name</th>
         <th scope="col">Username</th>
         <th scope="col">Score</th>
