Include functioning game

--- a/game/app/views/layouts/application.html.erb
+++ b/game/app/views/layouts/application.html.erb
@@ -8,12 +8,13 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= yield :head_script_connect4 %>
 
     <%# enable Atkinson Hyperlegible font %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap" rel="stylesheet">
-    
+
   </head>
 
   <body>
