--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -3,6 +3,8 @@
 <% end %>
 
 <h1> Connect4 </h1>
+<h3 id="red-player"> Red Player: </h3>
+<h3 id="yellow-player"> Yellow Player: </h3>
 <h2 id="winner"> </h2>
 <div class="board-container"> 
     <div id="board"><div>
