--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -6,6 +6,10 @@
 <h3 id="red-player"> Red Player: </h3>
 <h3 id="yellow-player"> Yellow Player: </h3>
 <h2 id="winner"> </h2>
+<div id="connect4-button-div"> </div>
 <div class="board-container"> 
     <div id="board"><div>
 </div>
+
+
+<%# <div class="connect4-button" hidden> <%= link_to "Next Round", next_round_path, class: "decor-button button-shadow" %> 
