--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -3,8 +3,19 @@
 <% end %>
 
 <h1> Connect4 </h1>
-<h3 id="red-player"> Red Player: </h3>
-<h3 id="yellow-player"> Yellow Player: </h3>
+
+<div class="scoreboard-container">
+  <div>
+    <h3 id="red-player" class="red-text"> Red Player: </h3>
+    <h3 id="red-score" class="red-text"> Score: 0 </h3>
+  </div>
+
+  <div>
+    <h3 id="yellow-player" class="yellow-text"> Yellow Player: </h3>
+    <h3 id="yellow-score" class="yellow-text"> Score: 0 </h3>
+  </div>
+</div>
+
 <h2 id="winner"> </h2>
 <div id="connect4-button-div"> </div>
 <div class="board-container"> 
