Indicate what round players are on

--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -16,11 +16,14 @@
   </div>
 </div>
 
-<h2 id="winner"> </h2>
-<div id="connect4-button-div"> </div>
+<div id="middle-div">
+    <h2 id="round-header">Round 0 <h2>
+    <h2 id="winner"> </h2> <%# this is also used for indicating whose turn it is. %>
+    <div id="connect4-button-div"> </div> 
+</div>
+
 <div class="board-container"> 
     <div id="board"><div>
 </div>
 
 
-<%# <div class="connect4-button" hidden> <%= link_to "Next Round", next_round_path, class: "decor-button button-shadow" %> 
