Change column in scores from datetime to date

--- a/game/app/views/users/profile.html.erb
+++ b/game/app/views/users/profile.html.erb
@@ -38,7 +38,7 @@
                 <% @data.each do |score| %>
                     <div class="score-item">
                         <p> <strong> Score:</strong> <%= score.score %> </p>
-                        <p> <strong> Date-Time: </strong> <%= score.created_at %> </p>
+                        <p> <strong> Date: </strong> <%= score.date %> </p>
                     </div>
                 <% end %>
             </div>
