--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -16,11 +16,11 @@
   </div>
 </div>
 
-<span id="middle-div">
-    <h2 id="round-header">Round 0 <h2>
+<div class="middle-div">
+    <h2 id="round-header">Round 0 </h2>
     <h2 id="winner"> </h2> <%# this is also used for indicating whose turn it is. %>
-    <div id="connect4-button-div"> </div> 
-</span>
+    <span id="connect4-button-div"> </span> 
+</div>
 
 <div class="board-container"> 
     <div id="board"><div>
