--- a/game/app/views/scores/connect4.html.erb
+++ b/game/app/views/scores/connect4.html.erb
@@ -4,26 +4,26 @@
 
 <h1 id="connect4-heading"> Connect4 </h1>
 
-<div class="scoreboard-container">
-  <div>
-    <h3 id="red-player" class="red-text"> Red Player: </h3>
-    <h3 id="red-score" class="red-text"> Score: 0 </h3>
+  <main> <div class="scoreboard-container">
+    <div>
+      <h3 id="red-player" class="red-text"> Red Player: </h3>
+      <h3 id="red-score" class="red-text"> Score: 0 </h3>
+    </div>
+
+    <div>
+      <h3 id="yellow-player" class="yellow-text"> Yellow Player: </h3>
+      <h3 id="yellow-score" class="yellow-text"> Score: 0 </h3>
+    </div>
   </div>
 
-  <div>
-    <h3 id="yellow-player" class="yellow-text"> Yellow Player: </h3>
-    <h3 id="yellow-score" class="yellow-text"> Score: 0 </h3>
+  <div class="middle-div">
+      <h2 id="round-header">Round 0 </h2>
+      <h2 id="winner"> </h2> <%# this is also used for indicating whose turn it is. %>
+      <span id="connect4-button-div"> </span> 
   </div>
-</div>
 
-<div class="middle-div">
-    <h2 id="round-header">Round 0 </h2>
-    <h2 id="winner"> </h2> <%# this is also used for indicating whose turn it is. %>
-    <span id="connect4-button-div"> </span> 
-</div>
-
-<div class="board-container"> 
-    <div id="board"><div>
-</div>
-
+  <div class="board-container"> 
+      <div id="board"><div>
+  </div>
+</main>
 
