--- a/game/app/views/users/index.html.erb
+++ b/game/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
                     if you do not already own one. </li>
 
                     <li> Once you have an account, access game: 
-                    <%= link_to "Connect4", connect4_path, target:"_blank" %>. </li>
+                    <%= link_to "Connect4", setup_game_path, target:"_blank" %>. </li>
                 </ol>
 
                 <ul>
