--- a/game/app/views/users/create_account.html.erb
+++ b/game/app/views/users/create_account.html.erb
@@ -1,10 +1,10 @@
+<h1> Create User Account </h1>
+
 <% if flash[:alert] %>
   <div class="flash-alert">
-    <%= flash[:alert] %>
+    <span> <%= flash[:alert] %> </span>
   </div>
 <% end %>
-
-<h1> Create User Account </h1>
 
 <main> 
   <%= render "form", user: @user %>
