--- a/game/app/views/users/_form.html.erb
+++ b/game/app/views/users/_form.html.erb
@@ -2,40 +2,59 @@
 <%# Note: update path (rather than create) is followed automatically by resources. 
 It knows we are updating because we call edit path beforehand. %>
 
-<main> <div class="form-content">
-  <%= form_with model: user do |form| %>
-      <div>
-          <%= form.label :name %> <br>
-          <%= form.text_field :name %>
-          <% user.errors.full_messages_for(:name).each do |message| %>
-              <div> <%= message %> </div>
-          <% end %>
-      </div>
-
-    <br> <br>
-
-    <div>
-      <%= form.label :username %><br>
-      <%= form.text_field :username %>
-      <% user.errors.full_messages_for(:username).each do |message| %>
-              <div> <%= message %> </div>
-      <% end %>
-    </div>
-
-    <br> <br>
-
-    <div>
-      <%= form.label :password %><br>
-      <%= form.text_field :password %>
-      <% user.errors.full_messages_for(:password).each do |message| %>
-              <div> <%= message %> </div>
-      <% end %>
-    </div>
-
-    <br> <br>
-
-    <div class="form-submit-button">
-      <%= form.submit "Submit" %>
-    </div>
+<main> 
+  <% if flash[:alert] %>
+        <div class="flash-alert">
+          <span> <%= flash[:alert] %> </span>
+        </div>
   <% end %>
-</div> </main>
+
+  <div class="form-content">
+   
+    <div class="form-div">
+      <%= form_with model: user do |form| %>
+          <div>
+              <b><%= form.label :name %> </b> 
+              <br>
+              <%= form.text_field :name %>
+              <% user.errors.full_messages_for(:name).each do |message| %>
+                  <div class="error-message"> <%= message %> </div>
+              <% end %>
+          </div>
+
+        <br> <br>
+
+        <div>
+          <b><%= form.label :username %> </b> 
+          <br>
+          <%= form.text_field :username %>
+          <% user.errors.full_messages_for(:username).each do |message| %>
+                  <div class="error-message"> <%= message %> </div>
+          <% end %>
+        </div>
+
+        <br> <br>
+
+        <div>
+          <b> <%= form.label :password %> </b>
+          <br>
+          <%= form.text_field :password %>
+          <% user.errors.full_messages_for(:password).each do |message| %>
+                  <div class="error-message"> <%= message %> </div>
+          <% end %>
+        </div>
+
+        <br> <br>
+
+        <div class="form-submit-button-div">
+          <%= form.submit "Submit" %>
+        </div>
+
+        <br> 
+        <div class="form-back-button-div">
+          <%= link_to "Back", @back_route, class: "decor-button button-shadow" %> 
+        </div>
+      <% end %>
+    </div>
+  </div> 
+</main>
