--- a/game/app/assets/stylesheets/application.css
+++ b/game/app/assets/stylesheets/application.css
@@ -116,7 +116,7 @@ a {
 .table {
   border-collapse: collapse;
   width: 75%;
-  margin: 3% auto 0 auto; /* clockwise: top, right, bottom, left */
+  margin: 3% auto 3% auto; /* clockwise: top, right, bottom, left */
 }
 
 .table td, .table th {
