fix asset pipeline for welcome gif

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="welcome-gif-container"> <%= image_tag("short-welcome.gif", alt: "cute apple cartoon waving hello and welcoming users", class: "welcome-gif") %> </div>
+        <div class="welcome-gif-container"> <%= image_tag("short-welcome", alt: "cute apple cartoon waving hello and welcoming users", class: "welcome-gif") %> </div>
     </div>
 
     <h2 id="final-message"> Thanks for playing; I hope you have fun! </h2>
